--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="main">
-    <img src="https://static.wikia.nocookie.net/p__/images/c/c0/Dean_Corso.webp/revision/latest?cb=20221230165649&path-prefix=protagonist" alt="photo" title="Actually not my photo">
+    <img src="https://m.media-amazon.com/images/M/MV5BMTMxNTU1NTYxNl5BMl5BanBnXkFtZTYwNzgyNTQ3._V1_.jpg">
   </div>
 </body>
 </html>
