--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My web Page</title>
-  <style>
-    img {
-      width: 350px;
-      height: 200px;
-      border-radius: 16px;
-      border: 1px solid black;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="main">
